WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
47854
WebKit2 should handle dismissing the Find overlay on mouse-down
https://bugs.webkit.org/show_bug.cgi?id=47854
Summary
WebKit2 should handle dismissing the Find overlay on mouse-down
Anders Carlsson
Reported
2010-10-18 15:32:05 PDT
WebKit2 should handle dismissing the Find overlay on mouse-down
Attachments
Patch
(3.80 KB, patch)
2010-10-18 15:34 PDT
,
Anders Carlsson
sullivan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-18 15:32:26 PDT
<
rdar://problem/8564738
>
Anders Carlsson
Comment 2
2010-10-18 15:34:12 PDT
Created
attachment 71092
[details]
Patch
Anders Carlsson
Comment 3
2010-10-18 15:41:15 PDT
Committed
r70004
: <
http://trac.webkit.org/changeset/70004
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug