WebKit2 should handle dismissing the Find overlay on mouse-down https://bugs.webkit.org/show_bug.cgi?id=47854

Reviewed by John Sullivan.

* WebProcess/WebPage/FindPageOverlay.cpp:
(WebKit::FindPageOverlay::mouseEvent):
Dismiss the find UI on MouseDown.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::mouseEvent):
If there's a page overlay, let it have a go at the event.

Canonical link: https://commits.webkit.org/60569@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70004 268f45cc-cd09-0410-ab3c-d52691b4dbfc