WebKit2/WebProcess/WebPage/FindPageOverlay.cpp
@@ -140,4 +140,15 @@ void FindPageOverlay::drawRect(GraphicsContext& graphicsContext, const IntRect& 
     graphicsContext.endTransparencyLayer();
 }
 
+bool FindPageOverlay::mouseEvent(const WebMouseEvent& event)
+{
+    if (event.type() == WebEvent::MouseDown) {
+        // Dismiss the overlay.
+        m_findController->hideFindUI();
+        return false;
+    }
+
+    return false;
+}
+
 } // namespace WebKit
