WebKit2/WebProcess/WebPage/PageOverlay.h
@@ -35,6 +35,7 @@ namespace WebCore {
 
 namespace WebKit {
 
+class WebMouseEvent;
 class WebPage;
 
 class PageOverlay {
@@ -43,7 +44,8 @@ class PageOverlay {
 public:
     virtual ~PageOverlay();
     virtual void drawRect(WebCore::GraphicsContext&, const WebCore::IntRect& dirtyRect) = 0;
-    
+    virtual bool mouseEvent(const WebMouseEvent&) = 0;
+
     void setPage(WebPage*);
     void setNeedsDisplay();
 
